# mixpiloteai

./: .gitignore  ADMIN_ANALYTICS_REPORT.md  AUDIO_ENGINE.md  AUTH_SECURITY_REPORT.md  BILLING_SECURITY_REPORT.md  CHANGELOG-BETA.md  CRASH_RECOVERY_REPORT.md  DATABASE_MIGRATION_REPORT.md  FINAL_PRODUCTION_READY.md  LAUNCH_CHECKLIST.md  LOCAL_AI_REPORT.md  PAYMENT_FLOW.md  PLUGIN_COMPATIBILITY_LIST.md  PRODUCTION_READINESS_AUDIT.md  README.md  REALTIME_COLLAB_REPORT.md  RECOVERY_FLOW.md  RELEASE_NOTES.md  SESSION_ARCHITECTURE.md  STABILITY.md  SYNC_ARCHITECTURE.md  VST_HOST_REPORT.md  docker-compose.production.yml  package.json  vercel.json
ai-service/: .env.example  main.py  requirements.txt
backend/: .env.example  Dockerfile  ecosystem.config.cjs  nixpacks.toml  package-lock.json  package.json  railway.json  render.yaml  tsconfig.json  tsconfig.test.json
desktop-app/: .gitignore  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  tsconfig.web.json
e2e/: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
electron/: .gitignore  main.js  package.json  preload.js
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
native/audio-engine/: Cargo.toml  build.rs
native/audio-engine/src/: main.rs
native/audio-engine/src/driver/: asio.rs  coreaudio.rs  mod.rs  wasapi.rs
native/audio-engine/src/engine/: automation.rs  buffering.rs  graph.rs  mixer.rs  mod.rs  profiler.rs  track.rs  transport.rs
native/audio-engine/src/ipc/: mod.rs  protocol.rs
native/audio-engine/src/memory/: mod.rs
native/audio-engine/src/plugin/: au.rs  automation.rs  manager.rs  midi.rs  mod.rs  processor.rs  vst3.rs
native/audio-engine/src/realtime/: mod.rs
scripts/: build-desktop.sh  generate-icons.sh
website/: .env.example  index.html  package.json  (+5 more)
(+825 files in other folders)
